--- a/facebook.html
+++ b/facebook.html
@@ -5,6 +5,161 @@
 	  <link rel="stylesheet" href="form.css" type="text/css"></link>
 </head>
 <body>
-Your code will go here!
+<fieldset><div id = "AccountCreation"><h2><legend>Create an Account</legend></h2></div>
+<div id = "Freeintro"><p>It's free and always will be</p></div>
+	<form action="/signup-form" method="post">
+		<div id = "Name">
+		        <input type="text" class="boxcontrollong" id="name" name="user_name" placeholder="First Name" value="" />
+						<input type="text" class="boxcontrollong" id="name" name="user_name" placeholder="Surname" value="" />
+		    </div>
+		    <div id = "Email" >
+		        <input type="email" class="boxcontrol" id="mail" name="user_mail" placeholder="Email" value="" />
+		    </div>
+				<div id = "ReEnterEmail" >
+						<input type="email" class="boxcontrol" id="mail" name="user_mail" placeholder="Re-enter Email" value="" />
+				</div>
+				<div id = "Password" >
+						<input type="Password" class="boxcontrol" id="password" name="user_password" placeholder="New Password" value="" />
+				</div>
+				<div id = "ReEnterPassword" >
+						<input type="Password" class="boxcontrol" id="password" name="user_password" placeholder="Re-Enter New Password" value="" />
+				</div><br>
+
+	<div id = "DOB"> Birthday <br><br>
+		<div id = "Month" class="bdcontrol"> <select>
+  <optgroup label="Month">
+    <option>January</option>
+    <option>February</option>
+    <option>March</option>
+		<option>April</option>
+		<option>May</option>
+		<option>June</option>
+		<option>July</option>
+		<option>August</option>
+		<option selected>September</option>
+		<option>October</option>
+		<option>November</option>
+		<option>December</option>
+  </optgroup>
+</select></div>
+
+<div id = "Day" class="bdcontrol"> <select>
+<optgroup label="Day">
+<option>1</option>
+<option>2</option>
+<option>3</option>
+<option>4</option>
+<option>5</option>
+<option>6</option>
+<option>7</option>
+<option>8</option>
+<option>9</option>
+<option>10</option>
+<option>11</option>
+<option>12</option>
+<option>13</option>
+<option>14</option>
+<option>15</option>
+<option>16</option>
+<option>17</option>
+<option>18</option>
+<option>19</option>
+<option>20</option>
+<option>21</option>
+<option>22</option>
+<option>23</option>
+<option>24</option>
+<option>25</option>
+<option selected>26</option>
+<option>27</option>
+<option>28</option>
+<option>29</option>
+<option>30</option>
+<option>31</option>
+</optgroup>
+</select></div>
+
+<div id = "Year" class="bdcontrol"> <select>
+<optgroup label="Year">
+<option>1950</option>
+<option>1951</option>
+<option>1952</option>
+<option>1953</option>
+<option>1954</option>
+<option>1955</option>
+<option>1956</option>
+<option>1957</option>
+<option>1958</option>
+<option>1959</option>
+<option>1960</option>
+<option>1961</option>
+<option>1962</option>
+<option>1963</option>
+<option>1964</option>
+<option>1965</option>
+<option>1966</option>
+<option>1967</option>
+<option>1968</option>
+<option>1969</option>
+<option>1970</option>
+<option>1971</option>
+<option>1972</option>
+<option>1973</option>
+<option>1974</option>
+<option>1975</option>
+<option>1976</option>
+<option>1977</option>
+<option>1978</option>
+<option>1979</option>
+<option>1980</option>
+<option>1981</option>
+<option>1982</option>
+<option>1983</option>
+<option>1984</option>
+<option>1985</option>
+<option>1986</option>
+<option>1987</option>
+<option>1988</option>
+<option>1989</option>
+<option>1990</option>
+<option>1991</option>
+<option>1992</option>
+<option>1993</option>
+<option>1994</option>
+<option>1995</option>
+<option selected>1996</option>
+<option>1997</option>
+<option>1998</option>
+<option>1999</option>
+<option>2000</option>
+<option>2001</option>
+<option>2002</option>
+<option>2003</option>
+<option>2004</option>
+<option>2005</option>
+<option>2006</option>
+<option>2007</option>
+<option>2008</option>
+<option>2009</option>
+<option>2010</option>
+<option>2011</option>
+<option>2012</option>
+<option>2013</option>
+<option>2014</option>
+<option>2015</option>
+<option>2016</option>
+<option>2017</option>
+</optgroup>
+</select></div>
+<div id = "Why"><p>Why do I need to provide my date of birth?</p></div></div>
+<br>
+  <div id= "Survey">
+  <p class="genderControl"><label for="g1"><input type="radio" name="g" id="g1" value="M"> Male</label></p>
+  <p class="genderControl"><label for="g2"><input type="radio" name="g" id="g2" value="F"> Female</label></p>
+<div id = "Terms"><p> By clicking Create an account, you agree to our Terms and that
+	<br>you have read our Data Policy, including our Cookie Use.</p></div>
+ <button type="submit" class="buttoncontrol">Create an account</button>
+</form></fieldset>
+
 	</body>
 </html>
