--- a/guestbook.html
+++ b/guestbook.html
@@ -8,15 +8,28 @@
 </head>
 <body>
   <div id= "Menubar"><ul>
-  <li><a href="index.html">Home</a></li>
+  <li><a href="guestbook.html">Home</a></li>
   <li><a href="class.html">Class</a></li>
   <li><a href="Interest.html">Interests</a></li>
   <li><a href="worldview.html">Worldview</a></li>
-  <li><a href="careeraspiration.html">Career</a></li>
   </ul></div>
-  <div id="Title"><h3>My Vision, My Dream</h3></div>
-  <div id="Wait"><p>The song is going to autoplay in ten seconds. Relax and enjoy the last page of my website.</p></div>
-  <br><div id="picture"><img src="Theatreofdreams.jpeg"></img></div><br>
+  <div id="Title"><h3>Hello to all Visitors</h3></div>
+  <div id="Wait"><p>Please fill out the form, and enjoy.<br> Let me know more about you!<br>
+  <img src="headphones.png"></img><br>Please use the earphone to enjoy better</p></div>
+  <br>
+<CENTER>
+  <div id="form"><FORM METHOD="POST" ACTION="mailto:kpark@students.logoscambodia.org">
+<br><div id="FONT"><b> Guest Book</b></div>
+<br>
+<INPUT class= "control" NAME="username" placeholder= "Enter Your Name" size="30" value=""> <BR>
+<br>
+<INPUT class= "control" Name="usermail" placeholder= "Enter Your Email Address" size="30" value="">
+<br><br>
+<TEXTAREA class= "control" NAME="comment" placeholder= "Comments" ROWS=6 COLS=60 value=""></TEXTAREA><br>
+<B><div id= "FONT">Thanks for your kindness. Now you can play around in my web page. There are simple quizes below.</B></div><br>
+<INPUT TYPE=submit class="button" VALUE="Save and Submit"><br><br>
+</CENTER>
+</FORM><br>
 <div id="intro"><p>My dream changed often in my childhood and as I grew older, the frequency of change became little.
 It was when I was about 14 years old when I was learning algebra or algebra 2. That time my dream was to become an architect like my father.
 I didn't know how to solve the problem so I asked my father. My father kept teaching me and, for some reason, I didn't get what he was teaching me.
@@ -26,8 +39,10 @@ It was like truama and this made myself think I am dumb, and I should choose a c
 <br><div id="MyCareer"><p>I thought and thought and thought about my career and this took me for year or more. The answer I got finally was to become business-man, which is also called as the CEO.
 At beginning, my parents didn't accept my idea. They said it would be hard to live, especially if I start my own business, which was what I was planning to do.
 As months flew and I still did not change my mind, my parents started to accept my idea. When I was coming up with what I wanted to become, several things influenced me to choose CEO, which is a secret for now. Working in UK, is also one of my dreams. </p></div>
+<br><div id="MusicFinish"><h4>If you want to listen to more music click play button below.</h4></div>
 <br><div id="Conclusion"><h4>Thank You for visiting my site. have a good day.</h4></div>
-<div id="Music"><audio autoplay><source src="longsong.wav" type="audio/WAV"></audio></div>
+<div id="Music"><audio autoplay><source src="chaos.mp3" type="audio/MP3"></audio></div>
+<div id="MusicPlay"><audio><source src="song.mp3" type="audio/MP3"></audio></div>
   <div id="Copyright">©Taejo<p></div>
   </body>
   </html>
